# blender-downloader

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  blender_downloader.py  lychee.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  pre-commit-autoupdate.yml  pre-commit.yml  update-copyright-years.yml  update-gh-actions.yml
blender_downloader/: __init__.py  disk_utils.py
src/blender_downloader/: __init__.py  __main__.py
tests/: conftest.py  test_discover_version_number_by_identifier.py  test_disk_usage.py  test_download_release.py  test_extract_release.py  test_get_legacy_release_download_url.py  test_get_nightly_release_download_url.py  test_get_stable_release_version_number.py  test_list_available_blender_versions.py  test_print_executables.py  testing_helpers.py  testing_utils.py
tests/test_unit/: test_discover_version_number_by_identifier.py  test_download_release.py  test_extract_release.py  test_get_legacy_release_download_url.py  test_get_nightly_release_download_url.py  test_list_available_blender_versions.py  test_print_executables.py
