[metadata]
name = blender_downloader
version = 0.0.2
description = Multiplatorm Blender downloader.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/blender-downloader
author = Álvaro Mondéjar Rubio
author_email = mondejar1994@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = blender_downloader
install_requires =
    tqdm
    dmglib;sys.platform == "darwin"
python_requires = >=3.6

[options.entry_points]
console_scripts =
    blender-downloader = blender_downloader:main

[options.extras_require]
dev =
    black==20.8b1
    bump2version==1.0.1
    flake8==3.8.4
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.7.0
    pre-commit==2.9.3
    pytest==6.2.1
    pytest-xdist==2.2.0
    yamllint==1.25.0
lint =
    black==20.8b1
    flake8==3.8.4
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.7.0
    yamllint==1.25.0
test =
    pytest==6.2.1

[flake8]
max-line-length = 88
extend-ignore =
    E203,
    W503,
    E731

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 88
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
